--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main class="container mx-auto px-4">
         <div class="bg-white rounded-lg custom-shadow p-6 mb-8">
-            <h1 class="font-bold text-blue-800 mb-6 text-center">Consulta do Local e Sala de Realização de Exames de Admissão - Apenas para Candidatos do Regime Laboral</h1>
+            <h1 class="font-bold text-blue-800 mb-6 text-center">Consulta do Local e Sala de Realização de Exames de Admissão - (Apenas para Candidatos do Regime Laboral)</h1>
             
             <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-8">
                 <input 
