--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <footer class="bg-white rounded-lg custom-shadow p-6 mb-8 text-center">
             <p class="text-gray-700 mb-2">
-                Em caso de reclamação, apresente-a até o dia <span class="font-semibold">16.01.2025</span> através do e-mail 
+                O prazo para as reclamações é extendido até as 12h do dia <span class="font-semibold">18.01.2025</span> através do e-mail 
                 <a href="mailto:admissao@unisave.ac.mz" class="text-blue-600 hover:text-blue-800 transition-colors duration-200">admissao@unisave.ac.mz</a>
             </p>
             <p class="text-gray-700">
