--- a/indexOLD.html
+++ b/indexOLD.html
@@ -72,7 +72,7 @@
 
     <main class="container mx-auto px-4">
         <div class="bg-white rounded-lg custom-shadow p-6 mb-8">
-            <h1 class="font-bold text-blue-800 mb-6 text-center">Consulta do Local e Sala de Examev- 2026. (Apenas para Candidatos do Regime Laboral)</h1>
+            <h1 class="font-bold text-blue-800 mb-6 text-center">Consulta do Local e Sala de Realização de Exames de Admissão - (Apenas para Candidatos do Regime Laboral)</h1>
             
             <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-8">
                 <input 
@@ -92,7 +92,17 @@
             <div class="overflow-hidden">
                 <div id="resultados"></div>
             </div>
-        </div>	
+        </div>
+
+        <footer class="bg-white rounded-lg custom-shadow p-6 mb-8 text-center">
+            <p class="text-gray-700 mb-2">
+                O prazo para as reclamações é extendido até as 12h do dia <span class="font-semibold">18.01.2025</span> através do e-mail 
+                <a href="mailto:admissao@unisave.ac.mz" class="text-blue-600 hover:text-blue-800 transition-colors duration-200">admissao@unisave.ac.mz</a>
+            </p>
+            <p class="text-gray-700">
+                ou pelos canais disponíveis no edital
+            </p>
+        </footer>	
     </main>
 
     <script>
