--- a/index.html
+++ b/index.html
@@ -93,6 +93,33 @@
                 <div id="resultados"></div>
             </div>
         </div>	
+
+        <footer class="bg-gray-100 border-t mt-10 p-6 text-sm text-gray-700">
+            <div class="max-w-5xl mx-auto text-center">
+
+                <h3 class="font-bold text-lg mb-2">COMUNICADO</h3>
+                <p class="font-semibold mb-4">ADIAMENTO DOS EXAMES DE ADMISSÃO – 2026</p>
+
+                <p class="mb-3">
+                    Dada a situação de emergência que o país atravessa, resultante das inundações, 
+                    a Universidade Save (UniSave), consciente do momento crítico que os candidatos e 
+                    as suas famílias enfrentam, comunica a toda a comunidade académica, aos candidatos 
+                    e ao público em geral, o adiamento dos exames de admissão previstos para o período 
+                    de <strong>20 a 23 de Janeiro de 2026</strong>.
+                </p>
+
+                <p class="mb-3">
+                    Os mesmos exames ficam reagendados para o período de 
+                    <strong>27 a 30 de Janeiro de 2026</strong>, se as condições climáticas o permitirem.
+                </p>
+
+                <p class="mb-4">
+                    A UniSave manifesta a mais profunda solidariedade com as famílias e comunidades 
+                    afectadas pelas intempéries que assolam o nosso país.
+                </p>
+            </div>
+        </footer>
+       
     </main>
 
     <script>
