--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>	
 
-        <footer class="bg-gray-100 border-t mt-10 p-6 text-sm text-gray-700">
+        <footer class="bg-red-100 border-t mt-10 p-6 text-sm text-gray-700">
             <div class="max-w-5xl mx-auto text-center">
 
                 <h3 class="font-bold text-lg mb-2">COMUNICADO</h3>
