--- a/index.html
+++ b/index.html
@@ -98,20 +98,28 @@
             <div class="max-w-5xl mx-auto text-center">
 
                 <h3 class="font-bold text-lg mb-2">COMUNICADO</h3>
-                <p class="font-semibold mb-4">ADIAMENTO DOS EXAMES DE ADMISSÃO – 2026</p>
-
-                <p class="mb-3">
-                    Dada a situação de emergência que o país atravessa, resultante das inundações, 
-                    a Universidade Save (UniSave), consciente do momento crítico que os candidatos e 
-                    as suas famílias enfrentam, comunica a toda a comunidade académica, aos candidatos 
-                    e ao público em geral, o adiamento dos exames de admissão previstos para o período 
-                    de <strong>20 a 23 de Janeiro de 2026</strong>.
+                <p class="font-semibold mb-4">
+                    REAGENDAMENTO DOS EXAMES DE ADMISSÃO E PRORROGAÇÃO DAS CANDIDATURAS – 2026
                 </p>
 
                 <p class="mb-3">
-                    Os mesmos exames ficam reagendados para o período de 
-                    <strong>27 a 30 de Janeiro de 2026</strong>, se as condições climáticas o permitirem.
+                    Na sequência do comunicado relativo ao adiamento dos exames de admissão, aliado à situação
+                    prevalecente das inundações e cheias em quase toda a região sul de Moçambique, que deixam os
+                    candidatos e as suas famílias numa situação de vulnerabilidade, a Universidade Save (UniSave)
+                    comunica a toda a comunidade académica, aos candidatos e ao público em geral o seguinte:
                 </p>
+
+                <p class="mb-3">
+                    1. Os exames de admissão foram reagendados para o período de 
+                    <strong>04 a 07 de Fevereiro de 2026 (Quarta-feira a Sábado)</strong>, obedecendo à ordem indicada no Edital.
+                </p>
+
+                <p class="mb-3">
+                    2. Foi igualmente prorrogado o prazo de candidatura (pré-inscrição e submissão de documentos)
+                    para os cursos do regime pós-laboral e da modalidade de educação a distância até 
+                    <strong>06 de Fevereiro de 2026</strong>.
+                </p>
+
 
 
             </div>
