--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 <h3 class="font-bold text-lg mb-2">COMUNICADO</h3>
                 <p class="font-semibold mb-4">
-                    REAGENDAMENTO DOS EXAMES DE ADMISSÃO E PRORROGAÇÃO DAS CANDIDATURAS – 2026
+                    REAGENDAMENTO DOS EXAMES DE ADMISSÃO – 2026
                 </p>
 
                 <p class="mb-3">
@@ -116,7 +116,7 @@
 
                 <p class="mb-3">
                     2. Foi igualmente prorrogado o prazo de candidatura (pré-inscrição e submissão de documentos)
-                    para os cursos do regime pós-laboral e da modalidade de educação a distância até 
+                    para os cursos do regime <strong>Pós-laboral e da modalidade de EAD</strong> até 
                     <strong>06 de Fevereiro de 2026</strong>.
                 </p>
 
